--- a/Client/Aiyo-client/Aiyo-client/Controls/MessageBubble.xaml
+++ b/Client/Aiyo-client/Aiyo-client/Controls/MessageBubble.xaml
@@ -2,10 +2,30 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Aiyo_Client.Controls.MessageBubble">
-    <HorizontalStackLayout BackgroundColor="Red">
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="StartAndExpand" HorizontalTextAlignment="Start" />
+
+    <HorizontalStackLayout x:Name="parentLayout" Padding="5">
+        <HorizontalStackLayout>
+            <VerticalStackLayout>
+                <Border Stroke="RoyalBlue" BackgroundColor="RoyalBlue" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
+                    <Border.StrokeShape>
+                        <RoundRectangle x:Name="strokeShape"/>
+                    </Border.StrokeShape>
+
+                <Label   
+                    x:Name="messageText"   
+                    VerticalOptions="CenterAndExpand"
+                    HorizontalOptions="FillAndExpand" 
+                    Text="Hello World" 
+                    FontSize="14"
+                    Padding="5"
+                    MaximumWidthRequest="400"
+                />
+                </Border>
+                <Label x:Name="timeText" Text="12:00 pm" TextColor="DarkGray"/>
+            </VerticalStackLayout>
+           
+
+        </HorizontalStackLayout>
     </HorizontalStackLayout>
+   
 </ContentView>
