Logger updates and app crash detection added

--- a/Client/Aiyo-client/Aiyo-client/AppShell.xaml
+++ b/Client/Aiyo-client/Aiyo-client/AppShell.xaml
@@ -9,6 +9,7 @@
     Shell.FlyoutBehavior="Disabled" MinimumHeightRequest="325" MinimumWidthRequest="725">
 
     <ShellContent
+        x:Name="homePage"
         Title="Home"
         ContentTemplate="{DataTemplate local:HomePage}"
         Route="MainPage" />
